--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,9 @@ body {
   background-color: #19191a;
 }
 
-h1 {
+.card {
+  width: 500px;
+  background-color: #202022;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -24,5 +26,13 @@ h1 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.card__description {
+  max-width: 200px;
 }
 /*# sourceMappingURL=styles.css.map */
