--- a/css/styles.css
+++ b/css/styles.css
@@ -12,11 +12,48 @@ body {
   min-height: 100vh;
   color: #ffffff;
   background-color: #19191a;
+  font-family: "Inter";
+}
+
+.main-title {
+  text-align: center;
+}
+
+.cards-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  max-width: 900px;
+  margin: 0 auto;
 }
 
 .card {
-  width: 500px;
+  position: relative;
+  max-width: 250px;
+  height: 400px;
   background-color: #202022;
+  border-radius: 5px;
+  text-align: center;
+  -webkit-box-shadow: 0 3px 1px -5px rgba(0, 0, 0, 0.109), 0 2px 2px rgba(0, 0, 0, 0.082), 0 1px 5px rgba(0, 0, 0, 0.164);
+          box-shadow: 0 3px 1px -5px rgba(0, 0, 0, 0.109), 0 2px 2px rgba(0, 0, 0, 0.082), 0 1px 5px rgba(0, 0, 0, 0.164);
+  margin-bottom: 20px;
+}
+
+.card__img {
+  width: 100%;
+  height: 140px;
+}
+
+.card__footer {
+  position: absolute;
+  top: 90%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -26,13 +63,11 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-.card__description {
-  max-width: 200px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+  border-top: 1px solid #373e47;
+  padding: 20px;
 }
 /*# sourceMappingURL=styles.css.map */
