--- a/scss/_default.scss
+++ b/scss/_default.scss
@@ -1,14 +1,15 @@
 body,
 html {
-  margin: 0;
+    margin: 0;
 }
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body {
-  min-height: 100vh;
-  color: $textColor;
-  background-color: $bgColor;
+    min-height: 100vh;
+    color: $textColor;
+    background-color: $bgColor;
+    font-family: "Inter";
 }
