--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,16 +1,37 @@
 @import '_variables';
 @import '_mixins';
 @import '_default';
+
+.main-title{
+    text-align: center;
+}
+.cards-container {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    max-width: 900px;
+    margin: 0 auto;
+}
+
 .card {
-    width: 500px;
+    position: relative;
+    max-width: 250px;
+    height: 400px;
     background-color: $cardBgColor;
-    &__title {}
-    @include flexCenter;
-    flex-direction: column;
-    &__description {
-        max-width: 200px;
+    border-radius: 5px;
+    text-align: center;
+    box-shadow: 0 3px 1px -5px rgba(0, 0, 0, 0.109), 0 2px 2px rgba(0, 0, 0, 0.082), 0 1px 5px rgba(0, 0, 0, 0.164);
+        margin-bottom: 20px;
+    &__img {
+        width: 100%;
+        height: 140px;
     }
     &__footer {
-        &__social {}
+        @include posAbsolute(90%);
+        @include flexCenter;
+        justify-content: space-between;
+        width: 100%;
+        border-top: 1px solid #373e47;
+        padding: 20px;
     }
 }
